; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-math-opts.c_replace_reciprocal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-math-opts.c_replace_reciprocal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.occurrence = type { i64, i64 }

@MULT_EXPR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @replace_reciprocal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @replace_reciprocal(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.occurrence*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @USE_STMT(i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = call %struct.TYPE_3__* @bb_for_stmt(i64 %8)
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.occurrence*
  store %struct.occurrence* %13, %struct.occurrence** %5, align 8
  %14 = load %struct.occurrence*, %struct.occurrence** %5, align 8
  %15 = getelementptr inbounds %struct.occurrence, %struct.occurrence* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %38

18:                                               ; preds = %1
  %19 = load i64, i64* %3, align 8
  %20 = load %struct.occurrence*, %struct.occurrence** %5, align 8
  %21 = getelementptr inbounds %struct.occurrence, %struct.occurrence* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %19, %22
  br i1 %23, label %24, label %38

24:                                               ; preds = %18
  %25 = load i64, i64* %3, align 8
  %26 = call i32 @TREE_OPERAND(i64 %25, i32 1)
  %27 = load i32, i32* @MULT_EXPR, align 4
  %28 = call i32 @TREE_SET_CODE(i32 %26, i32 %27)
  %29 = load i32, i32* %2, align 4
  %30 = load %struct.occurrence*, %struct.occurrence** %5, align 8
  %31 = getelementptr inbounds %struct.occurrence, %struct.occurrence* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @SET_USE(i32 %29, i64 %32)
  %34 = load i64, i64* %3, align 8
  %35 = call i32 @fold_stmt_inplace(i64 %34)
  %36 = load i64, i64* %3, align 8
  %37 = call i32 @update_stmt(i64 %36)
  br label %38

38:                                               ; preds = %24, %18, %1
  ret void
}

declare dso_local i64 @USE_STMT(i32) #1

declare dso_local %struct.TYPE_3__* @bb_for_stmt(i64) #1

declare dso_local i32 @TREE_SET_CODE(i32, i32) #1

declare dso_local i32 @TREE_OPERAND(i64, i32) #1

declare dso_local i32 @SET_USE(i32, i64) #1

declare dso_local i32 @fold_stmt_inplace(i64) #1

declare dso_local i32 @update_stmt(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
